--- a/index.html
+++ b/index.html
@@ -1,11 +1,70 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Flower</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Valentine's Day — A Special Page</title>
+    <meta name="description"
+        content="A simple, responsive single-page Valentine layout you can customize and deploy to Vercel." />
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
+
 <body>
-    welcome to my flower shop
+    <div id="bg-hearts" aria-hidden="true"></div>
+    <nav class="nav">
+        <div class="logo">❤️</div>
+        <div class="nav-actions">
+            <a href="#gallery" class="btn">Gallery</a>
+            <a href="#about" class="btn btn-ghost">About</a>
+        </div>
+    </nav>
+
+    <header class="hero" id="home">
+        <div class="hero-inner">
+            <h1 class="title">Be Mine — Valentine’s Day</h1>
+            <p class="subtitle">A little page to celebrate love, memories, and flowers.</p>
+            <div class="hero-cta">
+                <a href="#gallery" class="btn btn-primary">View Gallery</a>
+                <a href="#about" class="btn btn-ghost">Learn more</a>
+            </div>
+        </div>
+        <div class="hero-decor">
+            <svg viewBox="0 0 120 120" class="heart-svg" aria-hidden="true">
+                <path d="M60 100s-34-23-46-36C2 39 23 14 60 36c37-22 58 3 46 28-12 23-46 36-46 36z"
+                    fill="rgba(231,110,142,0.12)" />
+            </svg>
+        </div>
+    </header>
+
+    <main class="container">
+        <section id="about" class="card">
+            <h2>About This Day</h2>
+            <p>Use this space to write a short message, story or plan for Valentine’s Day. Keep it warm, personal, and
+                playful.</p>
+        </section>
+
+        <section id="gallery" class="card gallery">
+            <h2>Gallery</h2>
+            <div class="grid">
+                <div class="photo"><img src="images/photo1.svg" alt="photo 1"></div>
+                <div class="photo"><img src="images/photo2.svg" alt="photo 2"></div>
+                <div class="photo"><img src="images/photo3.svg" alt="photo 3"></div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <p>Made with ♥ for a special Valentine’s day.</p>
+        <p class="small">Deploy this folder to Vercel as a static site.</p>
+    </footer>
+
+    <!-- GSAP CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
