--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;700&display=swap"
+        rel="stylesheet">
+    <script>
+        // Tailwind Play CDN config — extend with cream + accent colors
+        window.tailwind = window.tailwind || {};
+        window.tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        accent: '#e76e9a',
+                        cream: '#fff8f2'
+                    }
+                },
+                fontFamily: {
+                    sans: ['Inter', 'system-ui', '-apple-system', 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Arial'],
+                    romantic: ['"Great Vibes"', 'Playfair Display', 'serif']
+                }
+            }
+        };
+    </script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
@@ -41,9 +62,47 @@
 
     <main class="container">
         <section id="about" class="card">
-            <h2>About This Day</h2>
+            <h2 class="font-bold">About This Day</h2>
             <p>Use this space to write a short message, story or plan for Valentine’s Day. Keep it warm, personal, and
                 playful.</p>
+        </section>
+
+        <section id="reasons" class=" reasons">
+            <h2>Reasons I Love You</h2>
+            <div class="reasons-grid grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4">
+                <article class="reason-card card">
+                    <div class="icon" aria-hidden="true">
+                        <!-- cute smile icon -->
+                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="12" cy="12" r="10" fill="#fff8f2" />
+                            <path d="M8 10h.01M16 10h.01" stroke="#e76e9a" stroke-width="1.4" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M8.5 15c1-1 3-1 4.5 0" stroke="#d55a7a" stroke-width="1.6" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                    <div class="content">
+                        <h3>Your Smile</h3>
+                        <p>The way you light up the room when you smile makes my heart skip a beat every single time.
+                        </p>
+                    </div>
+                </article>
+
+                <article class="reason-card card">
+                    <div class="icon" aria-hidden="true">
+                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect x="2" y="6" width="20" height="12" rx="3" fill="#fff8f2" />
+                            <path d="M7 10h.01M17 10h.01" stroke="#e76e9a" stroke-width="1.4" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                    <div class="content">
+                        <h3>Your Kindness</h3>
+                        <p>You make small kindnesses feel like big gestures — you care in a way that's beautiful and
+                            rare.</p>
+                    </div>
+                </article>
+            </div>
         </section>
 
         <section id="gallery" class="card gallery">
